tests/snapshots/tests__luau@attributes-2.lua.snap
---
source: tests/tests.rs
expression: "format(&contents, LuaVersion::Luau)"
input_file: tests/inputs-luau/attributes-2.lua
snapshot_kind: text
---
@native
function foo() end

@native
@deprecated
function bar() end
