tests/snapshots/tests__luau@attributes-4.lua.snap
---
source: tests/tests.rs
assertion_line: 36
expression: "format(&contents, LuaVersion::Luau)"
input_file: tests/inputs-luau/attributes-4.lua
---
-- leading newlines at start of block should be removed even when local/const function has attributes
do
	@native
	local function foo() end
end

do
	@native
	const function bar() end
end
