tests/snapshots/tests__luau@const.lua.snap
---
source: tests/tests.rs
expression: "format(&contents, LuaVersion::Luau)"
input_file: tests/inputs-luau/const.lua
---
const x = 1
const y: number = 2
const a, b = 1, 2
const foo: string, bar: number = "hello", 42
const longVariableName: string = "this is a very long string that might cause the line to exceed the column width limit"

const function greet()
	print("hello")
end

@native
const function optimized()
	return 42
end

