tests/snapshots/tests__luau@excess-parentheses.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
local foo = (bar :: any) :: number

-- https://github.com/JohnnyMorganz/StyLua/issues/345
local foo = (if true then 0 else 1) + 1

